--- a/manuscript/biblio.bib
+++ b/manuscript/biblio.bib
@@ -410,3 +410,16 @@ howpublished= {Available at \url{http://www.mortality.org} (downloaded on Januar
   year={2009},
   publisher={Elsevier}
 }
+
+@article{stmomo2018,
+ title={StMoMo: An R Package for Stochastic Mortality Modeling},
+ volume={84},
+ url={https://www.jstatsoft.org/index.php/jss/article/view/v084i03},
+ doi={10.18637/jss.v084.i03},
+ abstract={In this paper we mirror the framework of generalized (non-)linear models to define the family of generalized age-period-cohort stochastic mortality models which encompasses the vast majority of stochastic mortality projection models proposed to date, including the well-known Lee-Carter and Cairns-Blake-Dowd models. We also introduce the R package StMoMo which exploits the unifying framework of the generalized age-period-cohort family to provide tools for fitting stochastic mortality models, assessing their goodnessof-fit and performing mortality projections. We illustrate some of the capabilities of the package by performing a comparison of several stochastic mortality models applied to the England and Wales population.},
+ number={3},
+ journal={Journal of Statistical Software},
+ author={Villegas, Andrés M. and Kaishev, Vladimir K. and Millossovich, Pietro},
+ year={2018},
+ pages={1–38}
+}
